# tno-dynamics

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: mathematical_conventions.md  numerical_methods.md  research_scope.md
notebooks/: 01_cr3bp_trajectory.ipynb  02_halo_targeting.ipynb  03_halo_family_near_bifurcation.ipynb
src/tno_dynamics/: continuation.py  events.py  plotting.py  propagation.py  targeting.py
src/tno_dynamics/dynamics/: __init__.py  cr3bp.py  variational.py
tests/: test_continuation.py  test_cr3bp.py  test_events.py  test_package.py  test_plotting.py  test_propagation.py  test_targeting.py  test_variational.py
